[package]
name = "xanq"
version = "0.1.0"
edition = "2024"
authors = [ "Xanthorrhizol <xanthorrhizol@proton.me>" ]
description = "Embedding message queue"
repository = "https://github.com/Xanthorrhizol/xanq"
readme = "README.md"
license = "MIT"
keywords = ["message", "queue", "embed"]

[dependencies]
async-trait = "0.1.89"
bytes = "1.11.1"
log = "0.4.29"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "sync", "time", "macros", "net", "io-util"] }
xancode = "0.3.0"
